sm-custom/custom-invoice/main/default/objects/OrderItem/fields/revsm_BillingTerm__c.field-meta.xml
<CustomField>
    <fullName>revsm_BillingTerm__c</fullName>
    <label>RevSM BillingTerm</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>