sm-custom/custom-invoice/main/default/objects/OrderItem/fields/revsm_BillingTermUnit__c.field-meta.xml
<CustomField>
    <fullName>revsm_BillingTermUnit__c</fullName>
    <label>RevSM BillingTermUnit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Month</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>