sm-custom/custom-invoice/main/default/objects/OrderItem/fields/revsm_BillThroughDate__c.field-meta.xml
<CustomField>
    <fullName>revsm_BillThroughDate__c</fullName>
    <label>RevSM BillThroughDate</label>
    <type>Date</type>
</CustomField>