sm-custom/custom-invoice/main/default/objects/OrderItem/fields/revsm_IsCustomInvoice__c.field-meta.xml
<CustomField>
    <fullName>revsm_IsCustomInvoice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RevSM IsCustomInvoice</label>
    <type>Checkbox</type>
</CustomField>